# lime3ds-archive

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
CMakeModules/: BundleTarget.cmake
src/android/app/src/main/java/io/github/lime3ds/android/features/settings/ui/: SettingsAdapter.kt
src/android/app/src/main/res/values-de/: strings.xml
src/android/app/src/main/res/values-es/: strings.xml
src/android/app/src/main/res/values-fr/: strings.xml
src/android/app/src/main/res/values-it/: strings.xml
src/android/app/src/main/res/values-nb/: strings.xml
src/android/app/src/main/res/values-pl/: strings.xml
src/android/app/src/main/res/values-pt/: strings.xml
src/android/app/src/main/res/values-ru/: strings.xml
src/android/app/src/main/res/values-zh/: strings.xml
src/core/frontend/: framebuffer_layout.cpp
src/lime/: CMakeLists.txt  main.cpp
src/lime_qt/: CMakeLists.txt  lime_qt.cpp  lime_qt.h
src/lime_qt/configuration/: config.cpp  configure_input.cpp
src/lime_sdl/: CMakeLists.txt  lime_sdl.cpp
